// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Safe area view renders with content 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  pointerEvents="box-none"
  style={
    {
      "backgroundColor": undefined,
      "flex": 1,
    }
  }
  testID="safe-area-view-test"
>
  <View
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text>
      Content
    </Text>
  </View>
</RNCSafeAreaView>
`;

exports[`Safe area view renders with custom styling 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  pointerEvents="box-none"
  style={
    {
      "backgroundColor": "green",
      "flex": 1,
    }
  }
  testID="safe-area-view-test"
>
  <View
    pointerEvents="box-none"
    style={
      {
        "backgroundColor": "green",
        "flex": 1,
      }
    }
  >
    <Text>
      Content
    </Text>
  </View>
</RNCSafeAreaView>
`;

exports[`Safe area view renders without content 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  pointerEvents="box-none"
  style={
    {
      "backgroundColor": undefined,
      "flex": 1,
    }
  }
  testID="safe-area-view-test"
>
  <View
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  />
</RNCSafeAreaView>
`;
